[package]
name = "broker"
version = "0.1.0"
authors = ["nakagawa <yusuke2020@s.okayama-u.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the MsgBroker gRPC server
name = "server"
path = "src/server.rs"

[[bin]]
name = "recv"
path = "src/recv_client.rs"

[dependencies]
tonic = "0.3"
prost = "0.6"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "0.2", features = ["macros", "sync", "stream", "time"] }

async-stream = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"

[build-dependencies]
tonic-build = "0.3"